lib: Fix possible crash on startup

Fix possible crash when the object creation is cancelled on startup. We
shouldn't be using user_data until we know that the call has not been
cancelled, otherwise we could be accessing already freed memory.

 #0  g_type_check_instance_cast (type_instance=type_instance@entry=0x208dc60, iface_type=34189312) at /home/hadess/Projects/jhbuild/glib/gobject/gtype.c:4057
 #1  0x00007f34c8d09522 in object_manager_new_callback (source_object=<optimized out>, res=0x208c390, user_data=user_data@entry=0x208dc60)
     at ../../../../Projects/jhbuild/gnome-bluetooth/lib/bluetooth-client.c:761
 #2  0x00007f34ce7d819a in g_task_return_now (task=0x208c390) at /home/hadess/Projects/jhbuild/glib/gio/gtask.c:1148
 #3  0x00007f34ce7d81d9 in complete_in_idle_cb (task=task@entry=0x208c390) at /home/hadess/Projects/jhbuild/glib/gio/gtask.c:1162

https://bugzilla.gnome.org/show_bug.cgi?id=793505